<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProfileActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/fb_un"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/un"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittextshapestyle"
        android:clickable="false"
        android:editable="false"
        android:hint="@string/un"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3" />


    <EditText
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittextshapestyle"
        android:clickable="false"
        android:editable="false"
        android:hint="Mobile number"
        android:inputType="phone"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username" />

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_below="@+id/number"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittextshapestyle"
        android:editable="false"
        android:hint="email"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/number" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/phone_number"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/websi"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/fb_un"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittextshapestyle"
        android:editable="false"
        android:hint="@string/un"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/check_fb"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username" />

    <EditText
        android:id="@+id/weburl"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittextshapestyle"
        android:clickable="false"
        android:editable="false"
        android:hint="@string/weburl"
        android:inputType="textUri"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/check_web"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/clocation"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/locationtxtview"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittextshapestyle"
        android:clickable="false"
        android:editable="false"
        android:enabled="false"
        android:hint="@string/clocation"
        android:inputType="textLongMessage"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/change_location"
        app:layout_constraintStart_toStartOf="@+id/fb_un" />

    <Button
        android:id="@+id/change_location"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttonshape"
        android:onClick="viewlocation"
        android:text="@string/openinmaps"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/locationtxtview"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/check_web"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttonshape"
        android:onClick="visitweb"
        android:text="@string/visit"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weburl"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/check_fb"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttonshape"
        android:editable="false"
        android:onClick="visitfb"
        android:text="@string/visit"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fb_un"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/message"
        android:onClick="message"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/phone"
        android:onClick="phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/number"
        app:layout_constraintEnd_toStartOf="@+id/button2" />

</android.support.constraint.ConstraintLayout>